- Added Play, Pause, Stop and several other UI icons. (#91)
* - Added Play, Pause, Stop and several other UI icons.
- Added a screenshot :3

* update reuse

* reuse again

* screenshot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ set(HOST_SOURCES src/Emulator/Host/controller.cpp
 # the above is shared in sdl and qt version (TODO share them all)
 
 if(ENABLE_QT_GUI)
+qt_add_resources(RESOURCE_FILES src/shadps4.qrc)
     set(QT_GUI 
     src/qt_gui/main_window_ui.h
     src/qt_gui/main_window.cpp
@@ -166,6 +167,7 @@ if(ENABLE_QT_GUI)
     src/qt_gui/main_window_themes.cpp
     src/qt_gui/main_window_themes.h
     src/qt_gui/main.cpp
+    ${RESOURCE_FILES}
     )
 endif()
 
