LLE libc + other fixes part1 (#97)
* app0 folder is absolute

* some improvements on symbols types

* clang format

* missing libs.h

* improved symbols_resolver

* moved config to config folder

* functions to dump import functions

* improved logging output

* option for debugdump and improvements

* Apply suggestions from code review

Co-authored-by: GPUCode <47210458+GPUCode@users.noreply.github.com>

* clang format

---------

Co-authored-by: GPUCode <47210458+GPUCode@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,6 +186,8 @@ set(COMMON src/common/logging/backend.cpp
            src/common/assert.h
            src/common/bounded_threadsafe_queue.h
            src/common/concepts.h
+           src/common/config.cpp
+           src/common/config.h
            src/common/debug.h
            src/common/disassembler.cpp
            src/common/disassembler.h
@@ -229,10 +231,6 @@ set(FILE_FORMAT src/core/file_format/pfs.h
                 src/core/file_format/psf.h
 )
 
-set(UTILITIES   src/Util/config.cpp
-                src/Util/config.h
-)
-
 if(ENABLE_QT_GUI)
 qt_add_executable(shadps4
     ${QT_GUI}
@@ -240,7 +238,6 @@ qt_add_executable(shadps4
     ${CORE}
     ${CRYPTO}
     ${FILE_FORMAT}
-    ${UTILITIES}
 )
 else()
 add_executable(shadps4
@@ -308,7 +305,6 @@ add_executable(shadps4
     ${CORE}
     ${CRYPTO}
     ${FILE_FORMAT}
-    ${UTILITIES}
 )
 endif()
 
