Autogen system,user,dialog modules (#98)
* some rework on system_service, user_service

* fixed clang format

* more clang fix

* more clang fix

* added error codes in system service

* some libc functions

* fixed fprintf

* small fix

* linux fix

* error handling in user service

* error codes reorganized

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,11 +93,20 @@ add_subdirectory(externals)
 add_subdirectory(third-party)
 include_directories(src)
 
-set(LIBRARIES src/core/libraries/library_common.h
+set(LIBRARIES  src/core/libraries/library_common.h
               src/core/libraries/error_codes.h
+              src/core/libraries/libscecommondialog.cpp
+              src/core/libraries/libscecommondialog.h
               src/core/libraries/libscegnmdriver.cpp
               src/core/libraries/libscegnmdriver.h
+              src/core/libraries/libscemsgdialog.cpp
+              src/core/libraries/libscemsgdialog.h
+              src/core/libraries/libscesystemservice.cpp
+              src/core/libraries/libscesystemservice.h
+              src/core/libraries/libsceuserservice.cpp
+              src/core/libraries/libsceuserservice.h
 )
+
 set(LIBC_SOURCES src/core/hle/libraries/libc/libc.cpp
                  src/core/hle/libraries/libc/libc.h
                  src/core/hle/libraries/libc/printf.h
@@ -113,16 +122,9 @@ set(LIBC_SOURCES src/core/hle/libraries/libc/libc.cpp
                  src/core/hle/libraries/libc/libc_stdlib.cpp
                  src/core/hle/libraries/libc/libc_stdlib.h
 )
-set(USERSERVICE_SOURCES src/core/hle/libraries/libuserservice/libuserservice.cpp
-                        src/core/hle/libraries/libuserservice/libuserservice.h
-)
 
 set(PAD_SOURCES src/core/hle/libraries/libpad/pad.cpp
                 src/core/hle/libraries/libpad/pad.h
-)
-
-set(SYSTEMSERVICE_SOURCES src/core/hle/libraries/libsystemservice/system_service.cpp
-                          src/core/hle/libraries/libsystemservice/system_service.h
 )
 
 set(FILESYSTEM_SOURCES src/core/hle/libraries/libkernel/file_system.cpp
@@ -242,9 +244,7 @@ qt_add_executable(shadps4
 else()
 add_executable(shadps4
     ${LIBC_SOURCES}
-    ${USERSERVICE_SOURCES}
     ${PAD_SOURCES}
-    ${SYSTEMSERVICE_SOURCES}
     ${FILESYSTEM_SOURCES}
     ${HOST_SOURCES}
     ${LIBRARIES}
