--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,8 +102,18 @@ set(LIBRARIES src/core/libraries/library_common.h
               src/core/libraries/libscecommondialog.h
               src/core/libraries/libscegnmdriver.cpp
               src/core/libraries/libscegnmdriver.h
+              src/core/libraries/libscehttp.cpp
+              src/core/libraries/libscehttp.h
               src/core/libraries/libscemsgdialog.cpp
               src/core/libraries/libscemsgdialog.h
+              src/core/libraries/libscenet.cpp
+              src/core/libraries/libscenet.h
+              src/core/libraries/libscenetctl.cpp
+              src/core/libraries/libscenetctl.h
+              src/core/libraries/libscesavedata.cpp
+              src/core/libraries/libscesavedata.h
+              src/core/libraries/libscessl.cpp
+              src/core/libraries/libscessl.h
               src/core/libraries/libscesystemservice.cpp
               src/core/libraries/libscesystemservice.h
               src/core/libraries/libsceuserservice.cpp
