--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "externals/boost"]
 	path = externals/boost
 	url = https://github.com/raphaelthegreat/ext-boost
+[submodule "externals/xbyak"]
+	path = externals/xbyak
+	url = https://github.com/herumi/xbyak
